--- a/client/src/components/ratesItem/ratesItem.scss
+++ b/client/src/components/ratesItem/ratesItem.scss
@@ -2,6 +2,7 @@
 
 .rates {
     &__item {
+        position: relative;
         width: 472px;
         height: 681px;
         padding: 66px 61px 54px 66px;
@@ -13,6 +14,27 @@
         align-items: flex-start;
         border: 1px solid $kw-primary-color;
         transition: 0.3s all;
+
+        &-sticker {
+            position: absolute;
+            max-width: 140px;
+            aspect-ratio: 1 / 1;
+            height: auto;
+            background: $kw-primary-color;
+            right: 0;
+            top: 0;
+            transform: translate(20%, -30%) rotate(20deg);
+            padding: 10px;
+            border: 4px solid $kw-black-color;
+            z-index: 2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            font-weight: 500;
+            border-radius: 50%;
+
+        }
     }
 }
 
